--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "ethers": "^5.5.3",
     "fs-extra": "^10.0.0",
     "hardhat": "^2.8.3",
-    "hardhat-deploy": "^0.10.4",
+    "hardhat-deploy": "^0.10.5",
     "hardhat-deploy-tenderly": "^0.1.0",
     "hardhat-gas-reporter": "^1.0.7",
+    "hardhat-project": "github:0xHabitat/gemcutter-poc",
     "mocha": "^9.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
@@ -75,5 +76,12 @@
     "fork:node": "node ./_scripts.js fork:node",
     "fork:test": "node ./_scripts.js fork:test",
     "tenderly:push": "node ./_scripts.js tenderly:push"
+  },
+  "dependencies": {
+    "@ethersproject/abi": "^5.0.0",
+    "@ethersproject/bytes": "^5.0.0",
+    "@ethersproject/hardware-wallets": "^5.0.14",
+    "@ethersproject/providers": "^5.0.0",
+    "lodash": "^4.17.15"
   }
 }
