--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "eslint-config-prettier": "^8.3.0",
     "ethers": "^5.5.3",
     "fs-extra": "^10.0.0",
+    "gemcutter": "github:0xHabitat/gemcutter-poc",
     "hardhat": "^2.8.3",
     "hardhat-deploy": "^0.10.5",
     "hardhat-deploy-tenderly": "^0.1.0",
+    "hardhat-diamond-abi": "^2.0.0",
     "hardhat-gas-reporter": "^1.0.7",
-    "hardhat-project": "github:0xHabitat/gemcutter-poc",
     "mocha": "^9.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
